# ringo

./: .dockerignore  .gitignore  .gitmodules  BUILD.md  Cargo.toml  LICENSE  README.md  cliff.toml  clippy.toml  dist-workspace.toml  release-plz.toml
.cargo-husky/hooks/: pre-commit
.github/aur/: ringo-flow-bin.PKGBUILD  ringo-phone-bin.PKGBUILD
.github/homebrew/: ringo-flow.rb  ringo.rb
.github/workflows/: aur.yml  build-binaries.yml  ci.yml  docker-image.yml  docs.yml  homebrew.yml  release-crate.yml  release-flow.yml  release-plz.yml  release.yml
assets/: config.tera  default_config
crates/ringo/: Cargo.toml
crates/ringo-agent/: CHANGELOG.md  Cargo.toml  README.md
crates/ringo-agent/src/: audio.rs  client.rs  lib.rs  proto.rs  worker.rs
crates/ringo-core/: CHANGELOG.md  Cargo.toml  README.md  build.rs  wrapper.h
crates/ringo-core/assets/: config.tera
crates/ringo-core/src/: account.rs  backend.rs  baresip.rs  client.rs  event.rs  lib.rs  log.rs  phone.rs  siptrace.rs
crates/ringo-core/src/baresip/: ausrc.rs  bindings.rs  config.rs  events.rs  mod.rs  phone.rs  re_thread.rs  siptrace.rs  sounds.rs  stats.rs
crates/ringo-core/src/baresip/siptrace/: mod.rs  pcap.rs
crates/ringo-flow/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs
crates/ringo-flow/docs/: scenario-api.md
crates/ringo-flow/examples/: monitor.toml  suite.rhai  three-party-transfer.rhai  two-party.rhai  webhook-mock.rhai
crates/ringo-flow/src/: main.rs
crates/ringo-flow/src/engine/: assertion.rs  audio.rs  ctx.rs  duration.rs  http.rs  mock_server.rs  mod.rs  run.rs
crates/ringo-flow/src/runtime/: audio.rs  mod.rs  report.rs  session.rs  state.rs  wait.rs
crates/ringo-flow/src/script/: mod.rs
crates/ringo-flow/src/script/rhai/: bindings.rs  convert.rs  docs.rs  host.rs  mod.rs  types.rs
crates/ringo-flow/src/serve/: api.rs  config.rs  logging.rs  metrics.rs  mod.rs  prometheus.rs  runner.rs
crates/ringo-phone/: CHANGELOG.md  Cargo.toml  README.md
crates/ringo-phone/src/: app.rs  config.rs  control.rs  header.rs  history.rs  lib.rs  main.rs  notify.rs  picker.rs  profile.rs
crates/ringo-phone/src/form/: codecs.rs  field.rs  headers.rs  mod.rs  popups.rs
crates/ringo-phone/src/tui/: app.rs  call.rs  call_history.rs  command.rs  contacts.rs  dial.rs  handler.rs  keys.rs  log.rs  mod.rs  transfer.rs  ui.rs
crates/ringo-phone/tests/: control.rs  tui.rs
crates/ringo/.cargo-husky/hooks/: pre-commit
crates/ringo/src/: app.rs  contacts.rs  control.rs  profile.rs
crates/ringo/src/form/: field.rs  mod.rs
crates/ringo/src/tui/: app.rs  contacts.rs  dial.rs  keys.rs  mod.rs
docker/: builder.Dockerfile  smoke-flow.Dockerfile  smoke-phone.Dockerfile
docs/: book.toml  custom.css  gen-llms.py
docs/src/: SUMMARY.md  index.md  llms.txt
docs/src/ringo-flow/: audio.md  call-quality.md  debugging.md  getting-started.md  http-and-webhooks.md  introduction.md  monitoring.md  ringo-flow.d.rhai  running-in-ci.md  writing-scenarios.md  your-first-scenario.md
docs/src/ringo-flow/api/: agents.md  assertions-and-matchers.md  audiospec.md  call-state.md  callquality.md  environment.md  flow-and-timing.md  http-mock-server.md  http.md  index.md  mock-request.md  peer.md  scenario-structure.md  utilities.md
docs/src/ringo-phone/: configuration.md  getting-started.md  integrations.md  introduction.md  profiles.md  remote-control.md  tui.md
scripts/: ringo-rofi  ringo-tmux
src/: app.rs  baresip.rs  config.rs  contacts.rs  control.rs  event.rs  form.rs  header.rs  history.rs  hooks.rs  lib.rs  main.rs  phone.rs  picker.rs  profile.rs
src/form/: field.rs  headers.rs  mod.rs  popups.rs
src/tui/: app.rs  call.rs  call_history.rs  command.rs  contacts.rs  dial.rs  handler.rs  keys.rs  log.rs  mod.rs  transfer.rs  ui.rs
tests/: control.rs  tui.rs
themes/: catppuccin-mocha.toml  gruvbox.toml  nord.toml  tokyo-night.toml
wix/: main.wxs
