[workspace]
resolver = "2"
members = ["crates/ringo-core", "crates/ringo-agent", "crates/ringo-phone", "crates/ringo-flow"]

# Shared metadata inherited by the member crates via `<field>.workspace = true`.
# Each crate carries its own `version` (independent per-crate releasing via
# release-plz); only these non-version fields are shared.
[workspace.package]
edition = "2024"
license = "MIT"
authors = ["David Borzek <mail@davidborzek.de>"]
repository = "https://github.com/davidborzek/ringo"
rust-version = "1.85"

# `version` is the ringo-core release requirement; release-plz keeps it in sync
# when ringo-core is bumped (dependents then get a matching release).
[workspace.dependencies]
ringo-core = { path = "crates/ringo-core", version = "0.14.0" }
ringo-agent = { path = "crates/ringo-agent", version = "0.2.2" }
