[package]
name = "ringo-core"
description = "Shared baresip backend, ctrl_tcp protocol and call engine for the ringo tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "ringo_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tera = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
