[package]
name = "ringo-flow"
description = "Declarative telephony scenario test runner for baresip, built on ringo-core"
version = "0.11.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ringo-flow"
path = "src/main.rs"

[dependencies]
ringo-core.workspace = true
ringo-agent.workspace = true
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "charset", "blocking"] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "query"] }
rhai = { version = "1", features = ["sync", "metadata", "internals"] }
# `serve` mode only (the `server` feature):
toml = { version = "1", optional = true }
croner = { version = "3", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "json"] }

[features]
default = ["server"]
# The `serve` subcommand: scheduled scenario runs + Prometheus metrics.
server = ["dep:toml", "dep:croner", "dep:tracing", "dep:tracing-subscriber"]
