[package]
name = "ringo-phone"
description = "A terminal SIP softphone built on baresip"
keywords = ["sip", "voip", "baresip", "tui", "phone"]
categories = ["command-line-utilities"]
version = "0.13.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "ringo"
path = "src/lib.rs"

[[bin]]
name = "ringo"
path = "src/main.rs"

[dependencies]
ringo-core.workspace = true
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

[build-dependencies]

[features]
default = ["default-audio"]
default-audio = ["ringo-core/default-audio"]
pulse = ["ringo-core/pulse"]
alsa = ["ringo-core/alsa"]
coreaudio = ["ringo-core/coreaudio"]

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
